source/fitsio.d


/*--------------------- read column elements -------------*/
int ffgcv (
    fitsfile* fptr,
    int datatype,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    void* nulval,
    void* array,
    int* anynul,
    int* status);
int ffgcvn (
    fitsfile* fptr,
    int ncols,
    int* datatype,
    int* colnum,
    LONGLONG firstrow,
    LONGLONG nrows,
    void** nulval,
    void** array,
    int* anynul,
    int* status);
int ffgcf (
    fitsfile* fptr,
    int datatype,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    void* array,
    char* nullarray,
    int* anynul,
    int* status);
int ffgcvs (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    char* nulval,
    char** array,
    int* anynul,
    int* status);
int ffgcl (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    char* array,
    int* status);
int ffgcvl (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    char nulval,
    char* array,
    int* anynul,
    int* status);
int ffgcvb (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    ubyte nulval,
    ubyte* array,
    int* anynul,
    int* status);
int ffgcvsb (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    byte nulval,
    byte* array,
    int* anynul,
    int* status);
int ffgcvui (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    ushort nulval,
    ushort* array,
    int* anynul,
    int* status);
int ffgcvi (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    short nulval,
    short* array,
    int* anynul,
    int* status);
int ffgcvuj (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    c_ulong nulval,
    c_ulong* array,
    int* anynul,
    int* status);
int ffgcvj (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    c_long nulval,
    c_long* array,
    int* anynul,
    int* status);
int ffgcvujj (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    ULONGLONG nulval,
    ULONGLONG* array,
    int* anynul,
    int* status);
int ffgcvjj (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    LONGLONG nulval,
    LONGLONG* array,
    int* anynul,
    int* status);
int ffgcvuk (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    uint nulval,
    uint* array,
    int* anynul,
    int* status);
int ffgcvk (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    int nulval,
    int* array,
    int* anynul,
    int* status);
int ffgcve (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    float nulval,
    float* array,
    int* anynul,
    int* status);
int ffgcvd (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    double nulval,
    double* array,
    int* anynul,
    int* status);
int ffgcvc (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    float nulval,
    float* array,
    int* anynul,
    int* status);
int ffgcvm (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    double nulval,
    double* array,
    int* anynul,
    int* status);

int ffgcx (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstbit,
    LONGLONG nbits,
    char* larray,
    int* status);
int ffgcxui (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG nrows,
    c_long firstbit,
    int nbits,
    ushort* array,
    int* status);
int ffgcxuk (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG nrows,
    c_long firstbit,
    int nbits,
    uint* array,
    int* status);

int ffgcfs (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    char** array,
    char* nularray,
    int* anynul,
    int* status);
int ffgcfl (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    char* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgcfb (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    ubyte* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgcfsb (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    byte* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgcfui (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    ushort* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgcfi (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    short* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgcfuj (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    c_ulong* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgcfj (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    c_long* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgcfujj (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    ULONGLONG* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgcfjj (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    LONGLONG* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgcfuk (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    uint* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgcfk (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    int* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgcfe (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    float* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgcfd (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    double* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgcfc (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    float* array,
    char* nularray,
    int* anynul,
    int* status);
int ffgcfm (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG firstelem,
    LONGLONG nelem,
    double* array,
    char* nularray,
    int* anynul,
    int* status);

int ffgdes (
    fitsfile* fptr,
    int colnum,
    LONGLONG rownum,
    c_long* length,
    c_long* heapaddr,
    int* status);
int ffgdesll (
    fitsfile* fptr,
    int colnum,
    LONGLONG rownum,
    LONGLONG* length,
    LONGLONG* heapaddr,
    int* status);
int ffgdess (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG nrows,
    c_long* length,
    c_long* heapaddr,
    int* status);
int ffgdessll (
    fitsfile* fptr,
    int colnum,
    LONGLONG firstrow,
    LONGLONG nrows,
    LONGLONG* length,
    LONGLONG* heapaddr,
    int* status);
int ffpdes (
    fitsfile* fptr,
    int colnum,
    LONGLONG rownum,
    LONGLONG length,
    LONGLONG heapaddr,
    int* status);
int fftheap (
    fitsfile* fptr,
    LONGLONG* heapsize,
    LONGLONG* unused,
    LONGLONG* overlap,
    int* valid,
    int* status);
int ffcmph (fitsfile* fptr, int* status);

int ffgtbb (
    fitsfile* fptr,
    LONGLONG firstrow,
    LONGLONG firstchar,
    LONGLONG nchars,
    ubyte* values,
    int* status);

int ffgextn (fitsfile* fptr, LONGLONG offset, LONGLONG nelem, void* array, int* status);
int ffpextn (fitsfile* fptr, LONGLONG offset, LONGLONG nelem, void* array, int* status);

/*------------ write primary array or image elements -------------*/
int ffppx (
    fitsfile* fptr,
    int datatype,
    c_long* firstpix,
    LONGLONG nelem,
    void* array,
    int* status);
int ffppxll (
    fitsfile* fptr,
    int datatype,
    LONGLONG* firstpix,
    LONGLONG nelem,
    void* array,
    int* status);
int ffppxn (
    fitsfile* fptr,
    int datatype,
    c_long* firstpix,
    LONGLONG nelem,
    void* array,
    void* nulval,
    int* status);
int ffppxnll (
    fitsfile* fptr,
    int datatype,
    LONGLONG* firstpix,
    LONGLONG nelem,
    void* array,
    void* nulval,
    int* status);
int ffppr (
    fitsfile* fptr,
    int datatype,
    LONGLONG firstelem,
    LONGLONG nelem,
    void* array,
    int* status);
int ffpprb (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    ubyte* array,
    int* status);
int ffpprsb (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    byte* array,
    int* status);
int ffpprui (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    ushort* array,
    int* status);
int ffppri (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    short* array,
    int* status);
int ffppruj (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    c_ulong* array,
    int* status);
int ffpprj (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    c_long* array,
    int* status);
int ffppruk (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    uint* array,
    int* status);
int ffpprk (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    int* array,
    int* status);
int ffppre (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    float* array,
    int* status);
int ffpprd (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    double* array,
    int* status);
int ffpprjj (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    LONGLONG* array,
    int* status);
int ffpprujj (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    ULONGLONG* array,
    int* status);

int ffppru (
    fitsfile* fptr,
    c_long group,
    LONGLONG firstelem,
    LONGLONG nelem,
    int* status);
int ffpprn (fitsfile* fptr, LONGLONG firstelem, LONGLONG nelem, int* status);
